examples/passing/semantics/join_spawn.gm
x = 1;
join spawn {
    assert(x == 1);
    x = 2;
    assert(x == 2);
};
assert(x == 2);